修改文章标题的 HTML 标签，从div 改成了 h1 标题

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -591,7 +591,9 @@ header .go-back i {
 }
 
 .bg-cover .post-title {
-    font-size: 3rem;
+    margin: 0 auto;
+    font-size: 2.5rem;
+    font-weight: 400;
 }
 
 @-webkit-keyframes rainbow {
