--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -65,7 +65,7 @@
                     <a href="<%- url_for(post.path) %>">
                         <div class="card-image">
                             <% if (post.img) { %>
-                            <img src="<%- theme.jsDelivr.url %><%= post.img %>" class="responsive-img" alt="<%- post.title %>">
+                            <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
                             <% } else { %>
                             <%
                                 var featureimg = '/medias/featureimages/0.jpg';
@@ -76,7 +76,7 @@
 
                                 var len = featureImages.length;
                                 var num = Math.abs(hashCode(post.title) % len);
-                                featureimg = featureImages[num];
+                                featureimg = theme.jsDelivr.url + featureImages[num];
                             %>
                             <img src="<%- theme.jsDelivr.url %><%- featureimg %>" class="responsive-img" alt="<%- post.title %>">
                             <% } %>
