修改顶部 logo 的文字垂直对齐为 top，避免默认 middle 看起来偏下

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -306,6 +306,11 @@ header .brand-logo .logo-span {
     font-size: 2rem;
 }
 
+/*修改顶部 logo 的文字垂直对齐为 top，避免默认 middle 看起来偏下*/
+header .brand-logo .waves-effect {
+    vertical-align: top;
+}
+
 header .button-collapse i {
     font-size: 1.5rem;
 }
