在线音乐列表的feature
up

Revert "加入免费CDN，大幅提高网页访问速度；修复移动端留言板依然显示contact的问题"

This reverts commit cab56331

Signed-off-by: Civin <Civin@bupt.edu.cn>

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -17,7 +17,7 @@
                         <%- partial('_widget/dream') %>
                     <% } %>
 
-                    <% if (theme.music.enable && site.data && site.data.musics && !theme.music.fixed) { %>
+                    <% if (theme.music.enable ) { %>
                         <%- partial('_widget/music') %>
                     <% } %>
 
