添加配置在线音乐列表支持 Feat onlinemusic,fix blinkf/hexo-theme-matery#313

--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -7,9 +7,9 @@
     <% } %> x
     <div class="row">
         <meting-js class="col l8 offset-l2 m10 offset-m1 s12"
-                   server="netease"
-                   type="playlist"
-                   id="503838841"
+                   server="<%- theme.music.server%>"
+                   type="<%- theme.music.type%>"
+                   id="<%- theme.music.id%>"
                    fixed='<%- theme.music.fixed ? 'true':'false' %>'
                    autoplay='<%- theme.music.autoplay === 'true' %>'
                    theme:='<%- theme.music.theme %>'
