aplayer开启吸底模式后，在footer中全局存在

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -7,7 +7,7 @@
 <main class="content">
 
     <% if (page.current === 1
-            && (theme.dream.enable || (theme.music.enable && !theme.music.fixed))
+            && (theme.dream.enable || theme.music.enable)
                     || theme.video.enable || theme.recommend.enable) { %>
     <div id="indexCard" class="index-card">
         <div class="container ">
@@ -17,9 +17,9 @@
                         <%- partial('_widget/dream') %>
                     <% } %>
 
-                    <% if (theme.music.enable ) { %>
+                    <% if (theme.music.enable && !theme.music.fixed) { %>
                         <%- partial('_widget/music') %>
-                    <% } %>
+                        <% } %>
 
                     <% if (theme.video.enable) { %>
                         <%- partial('_widget/video') %>
@@ -34,12 +34,7 @@
             </div>
         </div>
     </div>
-    <% } %>
-
-    <% if (page.current === 1 && theme.music.enable
-            && site.data && site.data.musics && theme.music.fixed) { %>
-        <%- partial('_widget/music') %>
-    <% } %>
+    <% }%>
 
     <%
     var hashCode = function (str) {
