修复上次提交的小问题

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -7,8 +7,8 @@
 <main class="content">
 
     <% if (page.current === 1
-            && (theme.dream.enable || theme.music.enable)
-                    || theme.video.enable || theme.recommend.enable) { %>
+            && ((theme.dream.enable || theme.music.enable)
+                    || theme.video.enable || theme.recommend.enable)) { %>
     <div id="indexCard" class="index-card">
         <div class="container ">
             <div class="card">
