修复手机端宽度bug

--- a/layout/_partial/gitment.ejs
+++ b/layout/_partial/gitment.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="<%- theme.jsDelivr.url %>/css/gitment.css">
 
 <div class="gitment-card card" data-aos="fade-up">
-    <div class="comment_headling" style="font-size: 20px; font-weight: 700; position: relative; left: 20px; top: 15px; padding-bottom: 5px;">
+    <div class="comment_headling" style="font-size: 20px; font-weight: 700; position: relative; padding-left: 20px; top: 15px; padding-bottom: 5px;">
         <i class="fas fa-comments fa-fw" aria-hidden="true"></i>
         <span>评论</span>
     </div>
