Feat: A simple and minimalist comment system

--- a/layout/_partial/post-detail.ejs
+++ b/layout/_partial/post-detail.ejs
@@ -124,6 +124,10 @@
     <% if (theme.valine && theme.valine.enable) { %>
         <%- partial('_partial/valine') %>
     <% } %>
+	
+    <% if (theme.minivaline && theme.minivaline.enable) { %>
+        <%- partial('_partial/minivaline') %>
+    <% } %>
 
     <%- partial('_partial/prev-next') %>
 </div>
