--- a/layout/_partial/minivaline.ejs
+++ b/layout/_partial/minivaline.ejs
@@ -26,6 +26,7 @@
 		placeholder: '<%= theme.minivaline.placeholder %>',
 		lang: '<%= theme.minivaline.lang %>',
 		adminEmailMd5: '<%= theme.minivaline.adminEmailMd5 %>',
-		math: <%= theme.minivaline.math %>
+		math: <%= theme.minivaline.math %>,
+		md: <%= theme.minivaline.md %>,
    });
 </script>
