--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- theme.libs.css.tocbot %>">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.tocbot %>">
 <style>
     #articleContent h1::before,
     #articleContent h2::before,
@@ -120,7 +120,7 @@
 </div>
 <% } %>
 
-<script src="<%- theme.jsDelivr.url %><%- theme.libs.js.tocbot %>"></script>
+<script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.tocbot %>"></script>
 <script>
     $(function () {
         tocbot.init({
