--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- theme.libs.css.aplayer %>">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.aplayer %>">
 <style>
     .aplayer .aplayer-lrc p {
         font-size: 12px;
@@ -46,5 +46,5 @@
     </div>
 </div>
 
-<script src="<%- theme.jsDelivr.url %><%- theme.libs.js.aplayer %>"></script>
+<script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.aplayer %>"></script>
 <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
