--- a/layout/_partial/bg-cover-content.ejs
+++ b/layout/_partial/bg-cover-content.ejs
@@ -5,7 +5,7 @@
                 <% if (config.subtitle && config.subtitle.length > 0) { %>
                 <%= config.subtitle %>
                 <% } else { %>
-                subtitle
+                    subtitle
                 <% } %>
             </div>
 
@@ -24,7 +24,7 @@
                     });
                 </script>
                 <% } else { %>
-                <%= config.description %>
+                    <%= config.description %>
                 <% } %>
             </div>
         </div>
@@ -34,10 +34,10 @@
 <% if (theme.banner.enable) { %>
 <script>
     // 每天切换 banner 图.  Switch banner image every day.
-    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %>/medias/banner/' + new Date().getDay() + '.jpg)');
+    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %><%- config.root %>/medias/banner/' + new Date().getDay() + '.jpg)');
 </script>
 <% } else { %>
 <script>
-    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %>/medias/banner/0.jpg)');
+    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %><%- config.root %>/medias/banner/0.jpg)');
 </script>
 <% } %>
