--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -76,16 +76,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <%- partial('_partial/google-analytics') %>
     <title><%= pageTitle %></title>
-    <link rel="icon" type="<%= iconType %>" href="<%- theme.jsDelivr.url %><%- theme.favicon %>">
+    <link rel="icon" type="<%= iconType %>" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.favicon %>">
 
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.fontAwesome %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.materialize %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.aos %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.animate %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.lightgallery %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %>/css/matery.css">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %>/css/my.css">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.fontAwesome %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.materialize %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.aos %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.animate %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.lightgallery %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %>/css/matery.css">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %>/css/my.css">
 
-    <script src="<%- theme.jsDelivr.url %><%- theme.libs.js.jquery %>"></script>
+    <script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.jquery %>"></script>
     
 </head>
