--- a/layout/_partial/prev-next.ejs
+++ b/layout/_partial/prev-next.ejs
@@ -12,7 +12,7 @@ var hashCode = function (str) {
     return hash;
 };
 
-var featureimg = '/medias/featureimages/0.jpg';
+var featureimg = config.root + '/medias/featureimages/0.jpg';
 var featureImages = theme.featureImages;
 %>
 
@@ -26,14 +26,14 @@ var featureImages = theme.featureImages;
                 <a href="<%- url_for(page.prev.path) %>">
                     <div class="card-image">
                         <% if (page.prev.img) { %>
-                        <img src="<%= page.prev.img %>" class="responsive-img" alt="<%- page.prev.title %>">
+                        <img src="<%- config.root %><%- page.prev.img %>" class="responsive-img" alt="<%- page.prev.title %>">
                         <% } else { %>
                         <%
                             var len = featureImages.length;
                             var num = Math.abs(hashCode(page.prev.title) % len);
                             featureimg = featureImages[num];
                         %>
-                        <img src="<%- theme.jsDelivr.url %><%= featureimg %>" class="responsive-img" alt="<%- page.prev.title %>">
+                        <img src="<%- theme.jsDelivr.url %><%- config.root %><%- featureimg %>" class="responsive-img" alt="<%- page.prev.title %>">
                         <% } %>
                         <span class="card-title"><%- page.prev.title %></span>
                     </div>
@@ -88,14 +88,14 @@ var featureImages = theme.featureImages;
                 <a href="<%- url_for(page.path) %>">
                     <div class="card-image">
                         <% if (page.img) { %>
-                        <img src="<%= page.img %>" class="responsive-img" alt="<%- page.title %>">
+                        <img src="<%- config.root %><%- page.img %>" class="responsive-img" alt="<%- page.title %>">
                         <% } else { %>
                         <%
                             var len = featureImages.length;
                             var num = Math.abs(hashCode(page.title) % len);
                             featureimg = featureImages[num];
                         %>
-                        <img src="<%- theme.jsDelivr.url %><%= featureimg %>" class="responsive-img" alt="<%- page.title %>">
+                        <img src="<%- theme.jsDelivr.url %><%- config.root %><%= featureimg %>" class="responsive-img" alt="<%- page.title %>">
                         <% } %>
                         <span class="card-title"><%- page.title %></span>
                     </div>
@@ -152,14 +152,14 @@ var featureImages = theme.featureImages;
                 <a href="<%- url_for(page.next.path) %>">
                     <div class="card-image">
                         <% if (page.next.img) { %>
-                        <img src="<%= page.next.img %>" class="responsive-img" alt="<%- page.next.title %>">
+                        <img src="<%- config.root %><%- page.next.img %>" class="responsive-img" alt="<%- page.next.title %>">
                         <% } else { %>
                         <%
                             var len = featureImages.length;
                             var num = Math.abs(hashCode(page.next.title) % len);
                             featureimg = featureImages[num];
                         %>
-                        <img src="<%- theme.jsDelivr.url %><%= featureimg %>" class="responsive-img" alt="<%- page.next.title %>">
+                        <img src="<%- theme.jsDelivr.url %><%- config.root %><%- featureimg %>" class="responsive-img" alt="<%- page.next.title %>">
                         <% } %>
                         <span class="card-title"><%- page.next.title %></span>
                     </div>
@@ -214,14 +214,14 @@ var featureImages = theme.featureImages;
                 <a href="<%- url_for(page.path) %>">
                     <div class="card-image">
                         <% if (page.img) { %>
-                        <img src="<%= page.img %>" class="responsive-img" alt="<%- page.title %>">
+                        <img src="<%- config.root %><%- page.img %>" class="responsive-img" alt="<%- page.title %>">
                         <% } else { %>
                         <%
                             var len = featureImages.length;
                             var num = Math.abs(hashCode(page.title) % len);
                             featureimg = featureImages[num];
                         %>
-                        <img src="<%- theme.jsDelivr.url %><%= featureimg %>" class="responsive-img" alt="<%- page.title %>">
+                        <img src="<%- theme.jsDelivr.url %><%- config.root %><%= featureimg %>" class="responsive-img" alt="<%- page.title %>">
                         <% } %>
                         <span class="card-title"><%- page.title %></span>
                     </div>
