--- a/layout/_widget/tag-wordcloud.ejs
+++ b/layout/_widget/tag-wordcloud.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- theme.libs.css.jqcloud %>">
+<link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.jqcloud %>">
 <style type="text/css">
     #tag-wordcloud {
         width: 100%;
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="<%- theme.jsDelivr.url %><%- theme.libs.js.jqcloud %>"></script>
+<script type="text/javascript" src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.jqcloud %>"></script>
 <script type="text/javascript">
     <%
     let tagWordArr = [];
