--- a/layout/category.ejs
+++ b/layout/category.ejs
@@ -34,7 +34,7 @@
                                 var num = Math.abs(hashCode(post.title) % len);
                                 var featureimg = theme.featureImages[num];
                             %>
-                            <img src="<%- theme.jsDelivr.url %><%= featureimg %>" class="responsive-img" alt="<%- post.title %>">
+                            <img src="<%- theme.jsDelivr.url %><%- config.root %><%= featureimg %>" class="responsive-img" alt="<%- post.title %>">
                             <% } %>
                             <span class="card-title"><%- post.title %></span>
                         </div>
